# spaad

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
example_generated/: Cargo.toml
example_generated/src/: lib.rs
examples/: basic.rs  complex.rs
spaad/: Cargo.toml
spaad/examples/: basic.rs  complex.rs
spaad/src/: lib.rs
spaad_internal/: Cargo.toml
spaad_internal/src/: entangle.rs  lib.rs
spaad_internal/src/entangle/: transform.rs
src/: lib.rs
