[package]
name = "spaad_example_generated"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spaad = { path = "../spaad" }
xtra = { git = "https://github.com/Restioson/xtra", default-features = false }
async-trait = "^0.1.40"
