[package]
name = "spaad"
version = "0.3.1"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/Restioson/spaad"
documentation = "https://docs.rs/spaad"
readme = "../README.md"
description = "Zero boilerplate actor systems with xtra"
keywords = ["async", "actor", "futures", "async-await", "xtra"]
categories = ["asynchronous", "concurrency"]

[dependencies]
spaad_internal = "^0.3.1"
xtra = { version = "^0.4", default-features = false }
async-trait = { version = "^0.1" }

[features]
nightly = ["xtra/nightly", "spaad_internal/nightly"]
with-tokio-0_2 = ["xtra/with-tokio-0_2", "spaad_internal/with-tokio-0_2"]
with-async_std-1 = ["xtra/with-async_std-1", "spaad_internal/with-async_std-1"]

[dev-dependencies]
tokio = { version = "^0.2", features = ["full"] }

[[example]]
name = "complex"
path = "examples/complex.rs"
required-features = ["with-tokio-0_2"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["with-tokio-0_2"]
