[package]
name = "spaad"
version = "0.4.0-beta.2"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/Restioson/spaad"
documentation = "https://docs.rs/spaad"
readme = "../README.md"
description = "Zero boilerplate actor systems with xtra"
keywords = ["async", "actor", "futures", "async-await", "xtra"]
categories = ["asynchronous", "concurrency"]

[dependencies]
spaad_internal = { path = "../spaad_internal" }
xtra = { git = "https://github.com/Restioson/xtra", default-features = false }
async-trait = { version = "^0.1" }

[dev-dependencies]
tokio = { version = "^0.2", features = ["full"] }
xtra = { git = "https://github.com/Restioson/xtra", features = ["with-tokio-0_2"] }

[[example]]
name = "complex"
path = "examples/complex.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"
