[package]
name = "spaad"
version = "0.4.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/Restioson/spaad"
documentation = "https://docs.rs/spaad"
readme = "../README.md"
description = "Zero boilerplate actor systems with xtra"
keywords = ["async", "actor", "futures", "async-await", "xtra"]
categories = ["asynchronous", "concurrency"]

[dependencies]
spaad_internal = "0.4.0"
xtra = { version = "0.5.1", default-features = false }
async-trait = { version = "^0.1" }

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }
xtra = { version = "0.5.1", features = ["with-tokio-1"] }

[[example]]
name = "complex"
path = "examples/complex.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"
