[package]
name = "spaad_internal"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "^1"
syn = { version = "^1", features = ["full", "extra-traits"] }
proc-macro2 = "^1"

[features]
stable = []
with-tokio-0_2 = []
with-async_std-1 = []
