[package]
name = "spaad_internal"
version = "0.3.0"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/Restioson/spaad"
documentation = "https://docs.rs/spaad_internal"
description = "Proc-macro for the `spaad` crate. Do not use this directly, use that instead."
keywords = ["async", "actor", "futures", "async-await", "xtra"]
categories = ["asynchronous", "concurrency"]

[lib]
proc-macro = true

[dependencies]
quote = "^1"
syn = { version = "^1", features = ["full", "extra-traits"] }
proc-macro2 = "^1"
async-trait = "0.1"
proc-macro-error = "^1"

[features]
nightly = []
with-tokio-0_2 = []
with-async_std-1 = []
